@@ -1,8 +1,5 @@
 package me.lyamray.beneluxesmpcore.handlers.holograms;
 
-import de.oliver.fancyholograms.api.FancyHologramsPlugin;
-import de.oliver.fancyholograms.api.data.TextHologramData;
-import de.oliver.fancyholograms.api.hologram.Hologram;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import me.lyamray.beneluxesmpcore.BeneluxeSMPCore;
@@ -13,11 +10,8 @@ import me.lyamray.beneluxesmpcore.utils.numbers.NumberFormat;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.World;
-import org.bukkit.entity.Display;
-import org.bukkit.entity.TextDisplay;
 import org.bukkit.scheduler.BukkitRunnable;
 
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -64,81 +58,44 @@ public class RichestPlayersHologramHandler {
 
         List<PlayerData> topPlayers = getTopPlayersByMoney();
 
-        List<String> playerLines =
-                IntStream.range(0, TOP_PLAYERS)
-                        .mapToObj(i -> {
-                            PlayerData data = (i < topPlayers.size()) ? topPlayers.get(i) : null;
-                            String name = Optional.ofNullable(data)
-                                    .map(PlayerData::getName)
-                                    .filter(n -> !n.equalsIgnoreCase("Unknown"))
-                                    .orElse("Onbekend");
-                            String money = Optional.ofNullable(data)
-                                    .map(PlayerData::getMoney)
-                                    .map(NumberFormat::formatNumber)
-                                    .orElse("0");
-                            String line = String.format(
+        List<String> playerLines = IntStream.range(0, TOP_PLAYERS)
+                .mapToObj(i -> {
+                    PlayerData data = (i < topPlayers.size()) ? topPlayers.get(i) : null;
+                    String name = Optional.ofNullable(data)
+                            .map(PlayerData::getName)
+                            .filter(n -> !n.equalsIgnoreCase("Unknown"))
+                            .orElse("Onbekend");
+                    String money = Optional.ofNullable(data)
+                            .map(PlayerData::getMoney)
+                            .map(NumberFormat::formatNumber)
+                            .orElse("0");
+                    return MiniMessage.serializeComponent(MiniMessage.deserializeMessage(
+                            String.format(
                                     "<gradient:#B4CBD0:#A4BCC3>%d • %s</gradient><gray> » </gray><gradient:#AFD0DD:#9EC6D4>%s</gradient>",
                                     i + 1, name, money
-                            );
-                            return MiniMessage.serializeComponent(MiniMessage.deserializeMessage(line));
-                        })
-                        .toList();
+                            )
+                    ));
+                })
+                .collect(Collectors.toList());
 
-        List<String> lines = new ArrayList<>();
-        lines.add(MiniMessage.serializeComponent(MiniMessage.deserializeMessage(
+        playerLines.addFirst(MiniMessage.serializeComponent(MiniMessage.deserializeMessage(
                 "<gray> • </gray><gradient:#BFE7EA:#A4D0E1:#BFE7EA><b>Top 10 Rijkste Spelers</b>:</gradient><gray>"
         )));
-        lines.addAll(playerLines);
 
-        TextHologramData hologramData = getOrCreateHologramData(world);
-        if (hologramData == null) return;
+        Location hologramLocation = new Location(world, -1, 100, -7).toCenterLocation();
 
-        hologramData.getText().clear();
-        hologramData.getText().addAll(lines);
-        hologramData.setVisibilityDistance(1000);
-        updateHologram();
-    }
-
-
-    private TextHologramData getOrCreateHologramData(World world) {
-        if (!FancyHologramsPlugin.isEnabled()) return null;
-
-        FancyHologramsPlugin plugin = FancyHologramsPlugin.get();
-        Hologram hologram = plugin.getHologramManager().getHologram(HOLOGRAM_NAME).orElse(null);
-
-        if (hologram != null && hologram.getData() instanceof TextHologramData existingData) {
-            return existingData;
+        if (HologramHandler.getInstance().getHologram(HOLOGRAM_NAME) == null) {
+            HologramHandler.getInstance().createTextHologram(HOLOGRAM_NAME, hologramLocation,
+                    playerLines.toArray(new String[0]));
+        } else {
+            HologramHandler.getInstance().updateTextHologram(HOLOGRAM_NAME,
+                    playerLines.toArray(new String[0]));
+            HologramHandler.getInstance().updateHologramLocation(HOLOGRAM_NAME, hologramLocation);
         }
-
-        Location location = new Location(world, -1, 100, -7).toCenterLocation();
-        TextHologramData newData = new TextHologramData(HOLOGRAM_NAME, location);
-        newData.setBillboard(Display.Billboard.CENTER);
-        newData.setTextAlignment(TextDisplay.TextAlignment.CENTER);
-        newData.setPersistent(true);
-
-        Hologram newHologram = plugin.getHologramManager().create(newData);
-        plugin.getHologramManager().addHologram(newHologram);
-
-        try {
-            plugin.getHologramStorage().save(newHologram);
-        } catch (Exception e) {
-            log.error("Failed to save hologram '{}'", HOLOGRAM_NAME, e);
-        }
-
-        return newData;
-    }
-
-    private void updateHologram() {
-        FancyHologramsPlugin.get().getHologramManager().getHologram(HOLOGRAM_NAME)
-                .ifPresent(h -> {
-                    h.forceUpdate();
-                    h.queueUpdate();
-                });
     }
 
     public void removeHologram() {
-        FancyHologramsPlugin.get().getHologramManager().getHologram(HOLOGRAM_NAME)
-                .ifPresent(FancyHologramsPlugin.get().getHologramManager()::removeHologram);
+        HologramHandler.getInstance().removeHologram(HOLOGRAM_NAME);
     }
 
     private List<PlayerData> getTopPlayersByMoney() {
